# pcs_py_pkg

./: .flake8  .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml
pcs/: _constants.py  _utils.py  card_shuffle.py  command_line.py  gui.py
spec/: behavior_spec.py  metric_spec.py  shape_spec.py  widget_spec.py
tool/: stats.py  test_runner.py
